 - gui: added documentation for the Lua API
 - gui: added support for high-DPI systems using a global scaling factor (with hints from OS)
 - gui: added vertex_cache to speed up rendering (only available with OpenGL renderer)
 - gui: added texture atlases to speed up rendering
 - gui: added quad batching to speed up rendering
 - gui: the order in which widgets are created from XML is now tightly specified. For any frame:
    - the frame itself is created (without any of its regions or children)
    - the special regions are created (e.g., slider thumb texture, button texture, etc.)
    - the regions are created, in order of declaration in the XML file
    - the special frames are created (e.g., scroll child)
    - the children frames are created, in order of declaration in the XML file

Other changes:
 - general: various fixes and improvements to the build system
 - general: fixed various warnings and minor bugs detected by clang
 - general: moved away from using reference-counted smart pointers whenever possible
 - general: moved all code into the lxgui namespace
 - general: exceptions now inherit from std::exception
 - general: moved all enums to C++11 enum class
 - general: added C++11 noexcept specifiers where appropriate
 - general: removed foreach() macro in favor of C++11 range-based for loop
 - general: use override instead of virtual whenever applicable
 - general: made all single argument constructors explicit where appropriate
 - general: removed lua::var (custom std::any) and added utils::variant (using std::variant)
 - general: renamed "sensibility" to "sensitivity"
 - general: renamed "overed" to "hovered"
 - general: now using non-static data member initialisers whenever possible
 - utils: removed broken custom code for UTF8-UTF32 conversion and use a library instead
 - lua: added support for Lua versions later than 5.1
 - lua: removed unusual constructs to serialize a table
 - lua: starting switching to sol2 to manage the Lua state