@@ -28,6 +28,38 @@
 *   anchors, the text will simply word wrap (if allowed) and be cut to fit
 *   in the specified area.
 *
+*   __Formatting.__ If @{FontString:is_formatting_enabled} is true (default),
+*   the string displayed by the @{FontString} class can have special
+*   formatting. This is done by entering the pipe `|` character, followed by
+*   a command:
+*
+*   - `|caarrggbb` sets the color of the text. `aa`, `rr`, `gg`, and `bb`
+*   must be two-digit hexadecimal values representing each color
+*   component. For example, an opaque red color would be `|cffff0000`,
+*   while a semi-transparent blue would be `|c880000ff`.
+*
+*   - `|r` cancels the change of color from the previous `|c[...]`
+*   command. Color change commands stack up, and can be nested. In the
+*   formatted string
+*   `|cffff0000 hello |cff00ff00 world |r example |r formatting`,
+*   the word `hello` would be displayed in red, `world` in blue,
+*   `example` in red again, and `formatting` would be of whatever color
+*   is the default for the @{FontString} object (see
+*   @{FontString:get_text_color}).
+*
+*   - `|Tpath/to/texture.png:w:h|t` displays a texture. The command
+*   parameters must be contained within an opening `|T` and a closing
+*   `|t`. The parameters are separated by colons `:`. The first parameter
+*   must be the path to the texture file, and it is mandatory.
+*   The other two parameters are optional, and define the size of the
+*   displayed texture. If omitted, the texture will be displayed as a
+*   square matching the size of the current font. If only `w` is supplied,
+*   the texture will be displayed as a square of size `w` pixels.
+*   If both `w` and `h` are supplied, they set the width and height of the
+*   displayed texture, in pixels.
+*
+*   - `||` displays a single `|` character.
+*
 *   Inherits all methods from: @{UIObject}, @{LayeredRegion}.
 *
 *   Child classes: none.
